# learning-clip-from-scratch

./: .gitignore  CLAUDE.md  LESSON_PLAN.md  LICENSE  README.md  REFERENCE.md  main.py  pyproject.toml
data/postmortem/: incident_report.md
experiments/: README.md  findings.md
experiments/001_baseline/: notes.md
experiments/002_large_batch/: notes.md
experiments/003_lower_lr/: notes.md
experiments/004_grad_accum/: notes.md
experiments/005_siglip/: notes.md
experiments/007_finetune/: notes.md
experiments/008_adaptation/: notes.md
experiments/009_benchmark/: notes.md
experiments/009_benchmark/results/: baseline_cifar100.json  baseline_dtd.json  baseline_eurosat.json  baseline_fgvc_aircraft.json  baseline_food101.json  baseline_gtsrb.json  freeze_cifar100.json  freeze_dtd.json  freeze_eurosat.json  freeze_fgvc_aircraft.json  freeze_food101.json  freeze_gtsrb.json  full_ft_cifar100.json  full_ft_dtd.json  full_ft_eurosat.json  full_ft_fgvc_aircraft.json  full_ft_food101.json  full_ft_gtsrb.json  lora_r4_cifar100.json  lora_r4_dtd.json  lora_r4_eurosat.json  lora_r4_fgvc_aircraft.json  lora_r4_food101.json  lora_r4_gtsrb.json  wise_ft_cifar100.json  wise_ft_dtd.json  wise_ft_eurosat.json  wise_ft_fgvc_aircraft.json  (+2 more)
notebooks/: explore.ipynb  progress.ipynb
scripts/: analyze_009.py  clean_images.py  demo.py  download_cc3m.py  eval_benchmark.py  export_checkpoints.py  postmortem.py  run_007.sh  run_008.sh  run_009.sh  sanity_check.py  semantic_umap.py  smoke_test.py
src/: adapt.py  dataset.py  eval.py  loss.py  model.py  train.py  zero_shot_classify.py
